[gd_scene load_steps=28 format=2]

[ext_resource path="res://Base/Actors/Player/TriggerDetector.gd" type="Script" id=1]
[ext_resource path="res://Base/Actors/Player/PlayerMovement.gd" type="Script" id=2]
[ext_resource path="res://Base/Actors/Player/HUD/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Base/Actors/Player/InputProxy.gd" type="Script" id=4]
[ext_resource path="res://Base/Actors/Player/PlayerInterface.gd" type="Script" id=5]
[ext_resource path="res://Base/Actors/Player/PlayerResources.gd" type="Script" id=6]
[ext_resource path="res://Content/default/Actors/Player/Guns/Revolver.tscn" type="PackedScene" id=7]
[ext_resource path="res://Content/default/Actors/Player/Guns/DoubleBarrel.tscn" type="PackedScene" id=8]
[ext_resource path="res://Base/Actors/Player/Guns/GunController.gd" type="Script" id=9]
[ext_resource path="res://Base/Actors/Player/HUD/CrossHair.tscn" type="PackedScene" id=10]
[ext_resource path="res://Base/Actors/Player/Animations/AnimationPlayer.tscn" type="PackedScene" id=11]
[ext_resource path="res://Base/Actors/Player/HUD/HUD.tscn" type="PackedScene" id=12]
[ext_resource path="res://Base/Actors/Player/PlayerAnimations.gd" type="Script" id=13]
[ext_resource path="res://Base/Actors/Player/Animations/AnimationTree.tscn" type="PackedScene" id=14]
[ext_resource path="res://Base/Actors/Player/Guns/SwitchingTimer.tscn" type="PackedScene" id=15]
[ext_resource path="res://Base/Actors/Player/HUD/MapContainer.tscn" type="PackedScene" id=16]
[ext_resource path="res://Base/Actors/Player/WorldCamera.gd" type="Script" id=17]
[ext_resource path="res://Base/Actors/Player/PlayerStats.gd" type="Script" id=18]
[ext_resource path="res://Base/Actors/Player/HUD/GameOverStats.tscn" type="PackedScene" id=19]
[ext_resource path="res://Base/Actors/Player/Control/FalloutCheckerTimer.tscn" type="PackedScene" id=20]
[ext_resource path="res://Base/Actors/Player/MusicController.gd" type="Script" id=21]
[ext_resource path="res://Base/Actors/Player/Guns/SwitchingTimer.gd" type="Script" id=22]
[ext_resource path="res://Base/Actors/Player/MeleeDetector.tscn" type="PackedScene" id=23]
[ext_resource path="res://Base/Actors/Player/HUD/GameOver.tscn" type="PackedScene" id=24]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.5, 1.25, 0.5 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.587551, 0.0865006, 0.59743 )

[node name="Player" type="KinematicBody" groups=["Persistent", "PlayerTeam", "Saveable"]]
collision_mask = 31
script = ExtResource( 5 )

[node name="InputProxy" type="Node" parent="."]
script = ExtResource( 4 )

[node name="PlayerResources" type="Node" parent="."]
script = ExtResource( 6 )

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 18 )

[node name="PlayerMovement" type="Node" parent="."]
script = ExtResource( 2 )

[node name="PlayerAnimations" type="Node" parent="."]
script = ExtResource( 13 )

[node name="BodyCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 0 )
shape = SubResource( 1 )

[node name="LookHeight" type="Spatial" parent="BodyCollision"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.10543e-15, -1 )

[node name="LookDirection" type="Spatial" parent="BodyCollision/LookHeight"]

[node name="WorldCamera" type="Camera" parent="BodyCollision/LookHeight/LookDirection"]
transform = Transform( 1.00331, 0, 0, 0, -4.3856e-08, 1.00331, 0, -1.00331, -4.3856e-08, 0, 0, 0 )
current = true
fov = 90.0
far = 1000.0
script = ExtResource( 17 )

[node name="CrossHair" parent="BodyCollision/LookHeight/LookDirection/WorldCamera" instance=ExtResource( 10 )]

[node name="GunController" type="Spatial" parent="BodyCollision/LookHeight/LookDirection"]
transform = Transform( -1, -8.74228e-08, -2.62268e-08, 8.74228e-08, -1.31134e-07, -0.3, 8.74228e-08, -1, 3.93402e-08, 0.27261, -0.255308, 0.215562 )
script = ExtResource( 9 )

[node name="Revolver" parent="BodyCollision/LookHeight/LookDirection/GunController" instance=ExtResource( 7 )]

[node name="DoubleBarrel" parent="BodyCollision/LookHeight/LookDirection/GunController" instance=ExtResource( 8 )]
visible = false

[node name="SwitchingTimer" parent="BodyCollision/LookHeight/LookDirection/GunController" instance=ExtResource( 15 )]
script = ExtResource( 22 )

[node name="AnimationPlayer" parent="BodyCollision/LookHeight/LookDirection" instance=ExtResource( 11 )]

[node name="AnimationTree" parent="BodyCollision/LookHeight/LookDirection" instance=ExtResource( 14 )]

[node name="TriggerDetector" type="Area" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="TriggerDetector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
shape = SubResource( 2 )

[node name="FalloutCheckerTimer" parent="." instance=ExtResource( 20 )]

[node name="MeleeDetector" parent="." instance=ExtResource( 23 )]

[node name="FeetCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0801235, 0 )
visible = false
shape = SubResource( 3 )
disabled = true

[node name="HUD" parent="." instance=ExtResource( 12 )]

[node name="PauseMenu" parent="." instance=ExtResource( 3 )]
visible = false

[node name="MapContainer" parent="." instance=ExtResource( 16 )]
visible = false

[node name="FakeLoading" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="FakeLoading"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.113725, 0.113725, 0.980392 )

[node name="Label" type="Label" parent="FakeLoading"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 7
size_flags_vertical = 7
text = "please wait"
align = 1
valign = 1

[node name="GameOver" parent="." instance=ExtResource( 24 )]
visible = false

[node name="GameOverStats" parent="." instance=ExtResource( 19 )]
visible = false

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.97
bus = "Effects"

[node name="SFXPlayer2" type="AudioStreamPlayer" parent="."]
volume_db = -2.0
bus = "Effects"

[node name="SFXPlayer3" type="AudioStreamPlayer" parent="."]
volume_db = -2.0
bus = "Effects"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
bus = "Music"

[node name="MusicPlayer2" type="AudioStreamPlayer" parent="."]
pause_mode = 2
bus = "Music"

[node name="MusicController" type="Node" parent="."]
script = ExtResource( 21 )

[connection signal="finish_switching" from="BodyCollision/LookHeight/LookDirection/GunController/SwitchingTimer" to="BodyCollision/LookHeight/LookDirection/GunController" method="finish_switching"]
[connection signal="timeout" from="BodyCollision/LookHeight/LookDirection/GunController/SwitchingTimer" to="BodyCollision/LookHeight/LookDirection/GunController/SwitchingTimer" method="_on_SwitchingTimer_timeout"]
[connection signal="area_entered" from="TriggerDetector" to="TriggerDetector" method="_on_TriggerDetector_area_entered"]
